--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&family=Roboto+Condensed:ital@1&display=swap');
+@import url(https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css);
+body{
+    color: black;
+    font-family: 'Nunito', sans-serif;
+}
+
 .seccionProductos{
     display: flex;
     flex-flow:row wrap ;
@@ -9,22 +16,144 @@
     width: 20vw;
     box-shadow: 0 0 0 2px rgb(0 0 0 / 5%);
     border-radius: 10px;
-    padding-top: 30px;
     padding-bottom: 30px;
     margin-bottom: 40px;
-    height: 50vh;
     padding-right: 20px;
     padding-left: 20px;
+    text-decoration: none;
+    color: #000;
 }
 .divProductos:hover{
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
-header{
-    margin-bottom: 40px;
-}
 .imgList{
-    width: 20vw;
+    width: 15vw;
+    object-fit: cover;
+    height: 30vh;
 }
-body{
+.linkItem{
+    text-decoration: none;
+}
+
+
+.navbar{
+    width: 100%;
+    height: 8vh;
+    background-color: #000;
+    color: #fff;
+    position: relative;
+    top: 0;
+    left: 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr 0.3fr;
+    grid-template-rows: 1fr;
+    grid-template-areas:"nombre nav carrito";
+    margin-bottom: 40px;
+    justify-items: center;
+    align-content: center;
+}
+.carritoNav{
+    grid-area:carrito;
+}
+
+.listaLink{
+    color: #fff;
+    list-style-type: none;
+    margin: 20px;
+    font-weight: bold;
+}
+.titulo{
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 40px;
+    transition: 0.5s;
+}
+.titulo:hover{
+    transform: skew(10deg, 0)
+}
+.tituloLetras{
+    color: rgb(239, 184, 16);
+    text-decoration: none;
+}
+.linkNav{
+    color: white;
+    text-decoration: none;
+    transition: 0.5s;
+    font-weight: bold;
+    font-size: 25px;
+}
+.linkNav:hover{
+    color: rgb(239, 184, 16);
+}
+
+
+
+
+.detail{
+    height: 87vh;
+    width: 100%;
+    text-align: center;
+    display: flex;
+    justify-content: space-evenly;
+
+}
+.detailTitulo{
+    font-size: 40px;
+    position:relative;
+    font-weight: bolder;
+}
+.textoDetail{
+    width: 35%;
+    justify-self: left;
+}
+.descripcion{
+    font-size: 30px;
+}
+.stock{
+    font-weight: bolder;
+    font-size: 20px;
+    margin-top: 40px;
+}
+.contador{
+    width: 25rem;
+    position: relative;
+    left: 6.5vw;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+    border-radius: 0.5rem;
+    background-color:rgb(46, 46, 46);
+    color: rgb(239, 184, 16);
+}
+.numeroContador{
+    margin-left: 20px;
+    margin-right: 20px;
+    font-weight: bold;
+}
+.botonContador{
+    border: none;
+    background-color: rgb(46, 46, 46);
+    color: white;
+    font-size: 30px;   
+    transition: 0.4s; 
+}
+.botonContador:hover{
+    color:rgb(239, 184, 16);
+}
+.agregarContador{
+    border: none;
+    background-color: white;
+    font-size: 20px;
     color: black;
+    border-radius: 0.5rem;
+    margin-top: 40px;
+    transition: 0.3s;
+}
+.agregarContador:hover{
+    color:rgb(239, 184, 16);
+}
+.imgDetail{
+    width: 35vw;
+    height: 80vh;
+    object-fit: cover;
 }
